--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <script src="https://cdn.zhimatech.com/echarts-gl.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.zhimatech.com/echarts-liquidfill.min.js" crossorigin="anonymous"></script>
     <title>UTILS</title>
 </head>
 
